--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keen-js",
-  "version": "3.4.0-rc4",
+  "version": "3.4.0-gridium-02",
   "main": "src/server/index.js",
   "browser": "src/keen.js",
   "repository": {
